--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 	width: 395px;
 	height: 38px;
 	padding-top: 7px;
-	padding-right: 5px;
+	padding-right: 10px;
 	background-color: rgba(162,175,119,255);
 }
 #text{
@@ -72,20 +72,20 @@ button {
 	
   }
  #addbtn {
-	 height: 110px;
+	 height: 117px;
 	 background-color: rgba(255,174,29,255)
  } 
  #del{
 	background-color: rgba(241,90,43,255);
  }
- button:hover {
+ /* button:hover {
 
 	background-color: #303030;
 	
- }
+ } */
 
   button:active {
-	background-color: #0e87be;
+	background-color: #303030;
 	box-shadow: 0 5px #666;
 	transform: translateY(4px);
   }
